Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126673

[Regression 6.6 -> 6.7] Higher CPU utilization in large QML applications

XMLWordPrintable

    • Linux/X11
    • a84a2f737 (dev), 783ce84b8 (6.8), dca47a523 (6.7), a7fe91a73 (dev), cfdae7dbc (6.8), 89fc05faf (6.7)

      We have a large QML application with both a deep and wide item tree ( >10k items).

      We noticed in our tests that upgrading to Qt 6.7 increased our CPU utilization quite drastically. Some where 4x times higher than before.

      We collected data with perf and compared it with the application running Qt 6.6 that showed that most time was spent in “firstItemWithDirtyChildrenStacking”.

      We removed the block in https://code.qt.io/cgit/qt/qtdeclarative.git/tree/src/quick/items/qquickwindow.cpp?h=v6.7.0#n386 that was added during https://bugreports.qt.io/browse/QTBUG-102835 and voila the CPU utilization was back at Qt 6.6 levels.

      For us it seems iterating the whole item tree here can have quite the impact on large QML applications. Especially if they do not use the new window embedding feature.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            stefanbauer Stefan Bauer
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes