Detect dirty child window stacking order without recursing all items

Recursing all items was causing a high CPU utilization in scenarios
with deep and wide item trees (>10k items).

We can limit the search for a dirty item with ChildrenStackingChanged
to the list of dirty items.

For a synthetic benchmark this reduces the iteration time fro 0.60 ms
to 0.13 ms.

Pick-to: 6.7 6.8
Fixes: QTBUG-126673
Change-Id: Icb05a25365589268d5fb64f6f33179adb3406886
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>